Create common dataset configs

--- a/lexical_density.ipynb
+++ b/lexical_density.ipynb
@@ -10,58 +10,31 @@
     "import os\n",
     "import spacy\n",
     "from spacy.tokens.doc import Doc\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from dataset_config import BASE_FAKESPEAK_CONFIG, BASE_MISINFOTEXT_CONFIG"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "e3f269f2",
+   "execution_count": null,
+   "id": "7d6feb1a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class DatasetConfig():\n",
-    "    input_path: str\n",
-    "    output_path: str\n",
-    "    sheet_name: str\n",
-    "    usecols: list[str]\n",
-    "    cols_to_save: list[str]\n",
+    "fakespeak_config = BASE_FAKESPEAK_CONFIG | {\n",
+    "    \"output_path\": \"./data/Fakespeak-ENG/Analysis_output/Fakespeak_lexical_density.xlsx\",\n",
+    "    \"save_cols\": BASE_FAKESPEAK_CONFIG[\"save_cols\"] + [\"lexical_density\"]\n",
+    "}\n",
     "\n",
-    "    def __init__(self, input_path: str, output_path: str, sheet_name: str, usecols: list[str], cols_to_save: list[str]):\n",
-    "        self.input_path = input_path\n",
-    "        self.output_path = output_path\n",
-    "        self.sheet_name = sheet_name\n",
-    "        self.usecols = usecols\n",
-    "        self.cols_to_save = cols_to_save"
+    "misinfotext_config = BASE_MISINFOTEXT_CONFIG | {\n",
+    "    \"output_path\": \"./data/MisInfoText/PolitiFact_original_modified.xlsx\",\n",
+    "    \"save_cols\": BASE_MISINFOTEXT_CONFIG[\"save_cols\"] + [\"lexical_density\"]\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f7448ff7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fakespeak_config = DatasetConfig(\n",
-    "    input_path=\"./data/Fakespeak-ENG/Fakespeak-ENG modified.xlsx\",\n",
-    "    output_path=\"./data/Fakespeak-ENG/Analysis_output/Fakespeak_lexical_density.xlsx\",\n",
-    "    sheet_name=\"Working\",\n",
-    "    usecols=['ID', 'combinedLabel', 'originalTextType', 'originalBodyText', 'originalDateYear'],\n",
-    "    cols_to_save=[\"ID\", \"combinedLabel\", \"originalTextType\", \"originalBodyText\", \"lexical_density\"]\n",
-    ")\n",
-    "\n",
-    "misinfotext_config = DatasetConfig(\n",
-    "    input_path=\"./data/MisInfoText/PolitiFact_original_modified.xlsx\",\n",
-    "    output_path=\"./data/MisInfoText/Analysis_output/MisInfoText_lexical_density.xlsx\",\n",
-    "    sheet_name=\"Working\",\n",
-    "    usecols=None,\n",
-    "    cols_to_save=[\"factcheckURL\", \"originalURL\", \"originalTextType\", \"originalBodyText\", \"lexical_density\"]\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "497984c3",
    "metadata": {},
    "outputs": [],
@@ -71,21 +44,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "260d1639",
    "metadata": {},
    "outputs": [],
    "source": [
     "dataset_df = pd.read_excel(\n",
-    "    using_dataset.input_path, \n",
-    "    sheet_name=using_dataset.sheet_name, \n",
-    "    usecols=using_dataset.usecols\n",
+    "    using_dataset[\"input_path\"], \n",
+    "    sheet_name=using_dataset[\"sheet_name\"], \n",
+    "    usecols=using_dataset[\"usecols\"]\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "55a3266b",
    "metadata": {},
    "outputs": [
@@ -178,7 +151,7 @@
        "4  Huge@#CD 9 news. \\n@ncsbe\\n sent letter to eve...              2019  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "099b0097",
    "metadata": {},
    "outputs": [
@@ -218,38 +191,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "2bdc0661",
+   "execution_count": null,
+   "id": "3d54c1e6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "spacy.lang.en.English"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "type(nlp)"
+    "dataset_df[\"doc\"] = list(nlp.pipe(dataset_df[using_dataset[\"text_col\"]]))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3d54c1e6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset_df[\"doc\"] = list(nlp.pipe(dataset_df[\"originalBodyText\"]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
    "id": "0d37877b",
    "metadata": {},
    "outputs": [],
@@ -268,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "a81c0d4c",
    "metadata": {},
    "outputs": [
@@ -474,7 +426,7 @@
        "[2961 rows x 7 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "8fb73c1b",
    "metadata": {},
    "outputs": [
@@ -598,13 +550,13 @@
        "4  (Huge@#CD, 9, news, ., \\n, @ncsbe, \\n , sent, ...         0.560000  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "grouped_by_year = dataset_df.groupby(by=\"originalDateYear\")\n",
+    "grouped_by_year = dataset_df.groupby(by=using_dataset[\"year_col\"])\n",
     "years = grouped_by_year.groups\n",
     "years_dfs = [grouped_by_year.get_group(year) for year in years]\n",
     "years_dfs[0].head()"
@@ -612,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "f19bb508",
    "metadata": {},
    "outputs": [
@@ -749,7 +701,7 @@
        "2024  0.857143  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1268,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "2585d2c2",
    "metadata": {},
    "outputs": [
@@ -1381,10 +1333,10 @@
     }
    ],
    "source": [
-    "writer = pd.ExcelWriter(using_dataset.output_path, engine=\"xlsxwriter\")\n",
+    "writer = pd.ExcelWriter(using_dataset[\"output_path\"], engine=\"xlsxwriter\")\n",
     "\n",
     "for df, year in zip(years_dfs, years):\n",
-    "    df.to_excel(writer, sheet_name=str(year), index=False, columns=using_dataset.cols_to_save)\n",
+    "    df.to_excel(writer, sheet_name=str(year), index=False, columns=using_dataset[\"save_cols\"])\n",
     "\n",
     "summary_df.to_excel(writer, sheet_name=\"Summary\")\n",
     "\n",
@@ -1418,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "baeffe8d",
    "metadata": {},
    "outputs": [],
@@ -1426,7 +1378,7 @@
     "writer = pd.ExcelWriter(output_path_news_blog_social_media, engine=\"xlsxwriter\")\n",
     "\n",
     "for df, year in zip(years_news_blog_social_media_dfs, years_news_blog_social_media):\n",
-    "    df.to_excel(writer, sheet_name=str(year), index=False, columns=using_dataset.cols_to_save)\n",
+    "    df.to_excel(writer, sheet_name=str(year), index=False, columns=using_dataset.save_cols)\n",
     "\n",
     "summary_news_blog_social_media_df.to_excel(writer, sheet_name=\"Summary\")\n",
     "\n",
