--- a/lexical_diversity.ipynb
+++ b/lexical_diversity.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9047e64f",
    "metadata": {},
    "outputs": [],
@@ -10,53 +10,26 @@
     "import os\n",
     "import spacy\n",
     "from spacy.tokens.doc import Doc\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from dataset_config import BASE_FAKESPEAK_CONFIG, BASE_MISINFOTEXT_CONFIG"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "e3f269f2",
+   "execution_count": null,
+   "id": "ecbb22f8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class DatasetConfig():\n",
-    "    input_path: str\n",
-    "    output_path: str\n",
-    "    sheet_name: str\n",
-    "    usecols: list[str]\n",
-    "    cols_to_save: list[str]\n",
+    "fakespeak_config = BASE_FAKESPEAK_CONFIG | {\n",
+    "    \"output_path\": \"./data/Fakespeak-ENG/Analysis_output/Fakespeak_lexical_diversity.xlsx\",\n",
+    "    \"save_cols\": BASE_FAKESPEAK_CONFIG[\"save_cols\"] + [\"lexical_diversity\"]\n",
+    "}\n",
     "\n",
-    "    def __init__(self, input_path: str, output_path: str, sheet_name: str, usecols: list[str], cols_to_save: list[str]):\n",
-    "        self.input_path = input_path\n",
-    "        self.output_path = output_path\n",
-    "        self.sheet_name = sheet_name\n",
-    "        self.usecols = usecols\n",
-    "        self.cols_to_save = cols_to_save"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "f7448ff7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fakespeak_config = DatasetConfig(\n",
-    "    input_path=\"./data/Fakespeak-ENG/Fakespeak-ENG modified.xlsx\",\n",
-    "    output_path=\"./data/Fakespeak-ENG/Analysis_output/Fakespeak_lexical_diversity.xlsx\",\n",
-    "    sheet_name=\"Working\",\n",
-    "    usecols=['ID', 'combinedLabel', 'originalTextType', 'originalBodyText', 'originalDateYear'],\n",
-    "    cols_to_save=[\"ID\", \"combinedLabel\", \"originalTextType\", \"originalBodyText\", \"lexical_diversity\"]\n",
-    ")\n",
-    "\n",
-    "misinfotext_config = DatasetConfig(\n",
-    "    input_path=\"./data/MisInfoText/PolitiFact_original_modified.xlsx\",\n",
-    "    output_path=\"./data/MisInfoText/Analysis_output/MisInfoText_lexical_diversity.xlsx\",\n",
-    "    sheet_name=\"Working\",\n",
-    "    usecols=None,\n",
-    "    cols_to_save=[\"factcheckURL\", \"originalURL\", \"originalTextType\", \"originalBodyText\", \"lexical_diversity\"]\n",
-    ")"
+    "misinfotext_config = BASE_MISINFOTEXT_CONFIG | {\n",
+    "    \"output_path\": \"./data/MisInfoText/Analysis_output/MisInfoText_lexical_diversity.xlsx\",\n",
+    "    \"save_cols\": BASE_MISINFOTEXT_CONFIG[\"save_cols\"] + [\"lexical_diversity\"]\n",
+    "}"
    ]
   },
   {
@@ -77,9 +50,9 @@
    "outputs": [],
    "source": [
     "dataset_df = pd.read_excel(\n",
-    "    using_dataset.input_path, \n",
-    "    sheet_name=using_dataset.sheet_name, \n",
-    "    usecols=using_dataset.usecols\n",
+    "    using_dataset[\"input_path\"], \n",
+    "    sheet_name=using_dataset[\"sheet_name\"], \n",
+    "    usecols=using_dataset[\"usecols\"]\n",
     ")"
    ]
   },
@@ -218,12 +191,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "3d54c1e6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_df[\"doc\"] = list(nlp.pipe(dataset_df[\"originalBodyText\"]))"
+    "dataset_df[\"doc\"] = list(nlp.pipe(dataset_df[using_dataset[\"text_col\"]]))"
    ]
   },
   {
@@ -464,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "8fb73c1b",
    "metadata": {},
    "outputs": [
@@ -582,7 +555,7 @@
     }
    ],
    "source": [
-    "grouped_by_year = dataset_df.groupby(by=\"originalDateYear\")\n",
+    "grouped_by_year = dataset_df.groupby(by=using_dataset[\"year_col\"])\n",
     "years = grouped_by_year.groups\n",
     "years_dfs = [grouped_by_year.get_group(year) for year in years]\n",
     "years_dfs[0].head()"
@@ -1228,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "2585d2c2",
    "metadata": {},
    "outputs": [
@@ -1341,10 +1314,10 @@
     }
    ],
    "source": [
-    "writer = pd.ExcelWriter(using_dataset.output_path, engine=\"xlsxwriter\")\n",
+    "writer = pd.ExcelWriter(using_dataset[\"output_path\"], engine=\"xlsxwriter\")\n",
     "\n",
     "for df, year in zip(years_dfs, years):\n",
-    "    df.to_excel(writer, sheet_name=str(year), index=False, columns=using_dataset.cols_to_save)\n",
+    "    df.to_excel(writer, sheet_name=str(year), index=False, columns=using_dataset.save_cols)\n",
     "\n",
     "summary_df.to_excel(writer, sheet_name=\"Summary\")\n",
     "\n",
@@ -1378,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "baeffe8d",
    "metadata": {},
    "outputs": [],
@@ -1386,7 +1359,7 @@
     "writer = pd.ExcelWriter(output_path_news_blog_social_media, engine=\"xlsxwriter\")\n",
     "\n",
     "for df, year in zip(years_news_blog_social_media_dfs, years_news_blog_social_media):\n",
-    "    df.to_excel(writer, sheet_name=str(year), index=False, columns=using_dataset.cols_to_save)\n",
+    "    df.to_excel(writer, sheet_name=str(year), index=False, columns=using_dataset.save_cols)\n",
     "\n",
     "summary_news_blog_social_media_df.to_excel(writer, sheet_name=\"Summary\")\n",
     "\n",
