--- a/named_entity_recognition.ipynb
+++ b/named_entity_recognition.ipynb
@@ -84,7 +84,8 @@
     "import spacy\n",
     "from spacy.tokens.doc import Doc\n",
     "from spacy_entity_linker.EntityElement import EntityElement\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from dataset_config import BASE_FAKESPEAK_CONFIG, BASE_MISINFOTEXT_CONFIG"
    ]
   },
   {
@@ -111,70 +112,263 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class DatasetConfig():\n",
-    "    input_path: str\n",
-    "    output_path: str\n",
-    "    output_headlines_path: str\n",
-    "    sheet_name: str\n",
-    "    usecols: list[str]\n",
-    "\n",
-    "    def __init__(self, input_path: str, output_path: str, output_headlines_path: str, sheet_name: str, usecols: list[str]):\n",
-    "        self.input_path = input_path\n",
-    "        self.output_path = output_path\n",
-    "        self.output_headlines_path = output_headlines_path\n",
-    "        self.sheet_name = sheet_name\n",
-    "        self.usecols = usecols"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fakespeak_config = DatasetConfig(\n",
-    "    # file_path=\"/content/drive/My Drive/fake_news_over_time/Fakespeak_ENG_modified.xlsx\",\n",
-    "    input_path=\"./data/Fakespeak-ENG/Fakespeak-ENG modified.xlsx\",\n",
-    "    output_path=\"./data/Fakespeak-ENG/Analysis_output/Fakespeak_named_entities_frequency.xlsx\",\n",
-    "    output_headlines_path=\"./data/Fakespeak-ENG/Analysis_output/Fakespeak_named_entities_frequency_headlines.xlsx\",\n",
-    "    sheet_name=\"Working\",\n",
-    "    usecols=['ID', 'combinedLabel', 'originalTextType', 'originalBodyText', 'originalDateYear', 'originalHeadline']\n",
-    ")\n",
+    "fakespeak_config = BASE_FAKESPEAK_CONFIG | {\n",
+    "    \"output_path\": \"./data/Fakespeak-ENG/Analysis_output/Fakespeak_named_entities_frequency.xlsx\",\n",
+    "    \"output_headlines_path\": \"./data/Fakespeak-ENG/Analysis_output/Fakespeak_named_entities_frequency_headlines.xlsx\",\n",
+    "    \"usecols\": BASE_FAKESPEAK_CONFIG[\"usecols\"] + [\"originalHeadline\"]\n",
+    "}\n",
     "\n",
-    "misinfotext_config = DatasetConfig(\n",
-    "    input_path=\"./data/MisInfoText/PolitiFact_original_modified.xlsx\",\n",
-    "    output_path=\"./data/MisInfoText/Analysis_output/MisInfoText_named_entities_frequency.xlsx\",\n",
-    "    output_headlines_path=\"./data/MisInfoText/Analysis_output/MisInfoText_named_entities_frequency_headlines.xlsx\",\n",
-    "    sheet_name=\"Working\",\n",
-    "    usecols=None\n",
-    ")"
+    "misinfotext_config = BASE_MISINFOTEXT_CONFIG | {\n",
+    "    \"output_path\": \"./data/MisInfoText/PolitiFact_original_modified.xlsx\",\n",
+    "    \"output_headlines_path\": \"./data/MisInfoText/Analysis_output/MisInfoText_named_entities_frequency.xlsx\",\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "using_dataset = fakespeak_config"
+    "using_dataset = misinfotext_config"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "id": "rVQAdSteo7QM"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>factcheckURL</th>\n",
+       "      <th>originalURL</th>\n",
+       "      <th>originalBodyText</th>\n",
+       "      <th>originalHeadline</th>\n",
+       "      <th>originalTextType</th>\n",
+       "      <th>originalDate</th>\n",
+       "      <th>originalDateYear</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>http://www.politifact.com/arizona/statements/2...</td>\n",
+       "      <td>https://associatedmediacoverage.com/three-stat...</td>\n",
+       "      <td>Residents of multiple states will be asked to ...</td>\n",
+       "      <td>Multiple States Have Agreed To Implement A ‘Tw...</td>\n",
+       "      <td>News and blog</td>\n",
+       "      <td>2016-05-06</td>\n",
+       "      <td>2016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>http://www.politifact.com/california/statement...</td>\n",
+       "      <td>https://users.focalbeam.com/fs/distribution:wl...</td>\n",
+       "      <td>Sacramento, CA - United States Senator Dianne ...</td>\n",
+       "      <td>U.S. Senator Dianne Feinstein Opposes Prop. 64...</td>\n",
+       "      <td>Press release</td>\n",
+       "      <td>2016-07-12</td>\n",
+       "      <td>2016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>http://www.politifact.com/california/statement...</td>\n",
+       "      <td>http://www.sacbee.com/opinion/op-ed/soapbox/ar...</td>\n",
+       "      <td>We should anticipate black and gray markets in...</td>\n",
+       "      <td>Why you should buy a locking gasoline cap</td>\n",
+       "      <td>News and blog</td>\n",
+       "      <td>2017-08-04</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>http://www.politifact.com/california/statement...</td>\n",
+       "      <td>https://nocagastax.com/california-gas-tax-hike...</td>\n",
+       "      <td>As a ballot initiative calling for repeal of a...</td>\n",
+       "      <td>California Gas-Tax-Hike Repeal Campaign Heats Up</td>\n",
+       "      <td>News and blog</td>\n",
+       "      <td>2017-06-15</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>http://www.politifact.com/california/statement...</td>\n",
+       "      <td>https://chu.house.gov/media-center/press-relea...</td>\n",
+       "      <td>WASHINGTON, DC  The House of Representatives t...</td>\n",
+       "      <td>Rep. Chu Decries \"Heartless\" ACA Repeal Vote</td>\n",
+       "      <td>Press release</td>\n",
+       "      <td>2017-05-04</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>650</th>\n",
+       "      <td>http://www.politifact.com/wisconsin/statements...</td>\n",
+       "      <td>https://x.com/ScottWalker/status/9428776407421...</td>\n",
+       "      <td>Road projects across the state are staying on ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Social media</td>\n",
+       "      <td>2017-12-18</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>651</th>\n",
+       "      <td>http://www.politifact.com/wisconsin/statements...</td>\n",
+       "      <td>https://x.com/ScottWalker/status/9511017961011...</td>\n",
+       "      <td>The last thing we need is more Madison in our ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Social media</td>\n",
+       "      <td>2018-01-10</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>652</th>\n",
+       "      <td>http://www.politifact.com/wisconsin/statements...</td>\n",
+       "      <td>https://x.com/MahlonMitchell/status/9538161542...</td>\n",
+       "      <td>When \\n@ScottWalker\\n told firefighters we did...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Social media</td>\n",
+       "      <td>2018-01-18</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>653</th>\n",
+       "      <td>http://www.politifact.com/wisconsin/statements...</td>\n",
+       "      <td>http://dailycaller.com/2018/01/25/hey-look-sen...</td>\n",
+       "      <td>Now that its 2018, an election year, I would l...</td>\n",
+       "      <td>HEY LOOK! Senator Tammy Baldwin Is Back In Wis...</td>\n",
+       "      <td>News and blog</td>\n",
+       "      <td>2018-01-25</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>654</th>\n",
+       "      <td>http://www.politifact.com/wisconsin/statements...</td>\n",
+       "      <td>https://mahlonmitchell.com/bio</td>\n",
+       "      <td>Mahlon Mitchell currently serves as President ...</td>\n",
+       "      <td>Mahlon Mitchell for Governor</td>\n",
+       "      <td>Press release</td>\n",
+       "      <td>2018-04-30</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>655 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                          factcheckURL  \\\n",
+       "0    http://www.politifact.com/arizona/statements/2...   \n",
+       "1    http://www.politifact.com/california/statement...   \n",
+       "2    http://www.politifact.com/california/statement...   \n",
+       "3    http://www.politifact.com/california/statement...   \n",
+       "4    http://www.politifact.com/california/statement...   \n",
+       "..                                                 ...   \n",
+       "650  http://www.politifact.com/wisconsin/statements...   \n",
+       "651  http://www.politifact.com/wisconsin/statements...   \n",
+       "652  http://www.politifact.com/wisconsin/statements...   \n",
+       "653  http://www.politifact.com/wisconsin/statements...   \n",
+       "654  http://www.politifact.com/wisconsin/statements...   \n",
+       "\n",
+       "                                           originalURL  \\\n",
+       "0    https://associatedmediacoverage.com/three-stat...   \n",
+       "1    https://users.focalbeam.com/fs/distribution:wl...   \n",
+       "2    http://www.sacbee.com/opinion/op-ed/soapbox/ar...   \n",
+       "3    https://nocagastax.com/california-gas-tax-hike...   \n",
+       "4    https://chu.house.gov/media-center/press-relea...   \n",
+       "..                                                 ...   \n",
+       "650  https://x.com/ScottWalker/status/9428776407421...   \n",
+       "651  https://x.com/ScottWalker/status/9511017961011...   \n",
+       "652  https://x.com/MahlonMitchell/status/9538161542...   \n",
+       "653  http://dailycaller.com/2018/01/25/hey-look-sen...   \n",
+       "654                     https://mahlonmitchell.com/bio   \n",
+       "\n",
+       "                                      originalBodyText  \\\n",
+       "0    Residents of multiple states will be asked to ...   \n",
+       "1    Sacramento, CA - United States Senator Dianne ...   \n",
+       "2    We should anticipate black and gray markets in...   \n",
+       "3    As a ballot initiative calling for repeal of a...   \n",
+       "4    WASHINGTON, DC  The House of Representatives t...   \n",
+       "..                                                 ...   \n",
+       "650  Road projects across the state are staying on ...   \n",
+       "651  The last thing we need is more Madison in our ...   \n",
+       "652  When \\n@ScottWalker\\n told firefighters we did...   \n",
+       "653  Now that its 2018, an election year, I would l...   \n",
+       "654  Mahlon Mitchell currently serves as President ...   \n",
+       "\n",
+       "                                      originalHeadline originalTextType  \\\n",
+       "0    Multiple States Have Agreed To Implement A ‘Tw...    News and blog   \n",
+       "1    U.S. Senator Dianne Feinstein Opposes Prop. 64...    Press release   \n",
+       "2            Why you should buy a locking gasoline cap    News and blog   \n",
+       "3     California Gas-Tax-Hike Repeal Campaign Heats Up    News and blog   \n",
+       "4         Rep. Chu Decries \"Heartless\" ACA Repeal Vote    Press release   \n",
+       "..                                                 ...              ...   \n",
+       "650                                                NaN     Social media   \n",
+       "651                                                NaN     Social media   \n",
+       "652                                                NaN     Social media   \n",
+       "653  HEY LOOK! Senator Tammy Baldwin Is Back In Wis...    News and blog   \n",
+       "654                       Mahlon Mitchell for Governor    Press release   \n",
+       "\n",
+       "    originalDate  originalDateYear  \n",
+       "0     2016-05-06              2016  \n",
+       "1     2016-07-12              2016  \n",
+       "2     2017-08-04              2017  \n",
+       "3     2017-06-15              2017  \n",
+       "4     2017-05-04              2017  \n",
+       "..           ...               ...  \n",
+       "650   2017-12-18              2017  \n",
+       "651   2018-01-10              2018  \n",
+       "652   2018-01-18              2018  \n",
+       "653   2018-01-25              2018  \n",
+       "654   2018-04-30              2018  \n",
+       "\n",
+       "[655 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dataset_df = pd.read_excel(\n",
-    "    using_dataset.input_path, \n",
-    "    sheet_name=using_dataset.sheet_name, \n",
-    "    usecols=using_dataset.usecols\n",
+    "    using_dataset[\"input_path\"], \n",
+    "    sheet_name=using_dataset[\"sheet_name\"], \n",
+    "    usecols=using_dataset[\"usecols\"]\n",
     ")"
    ]
   },
@@ -375,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +582,7 @@
     "        \"Entity\": entity.get_label(),\n",
     "        \"Wikidata_id\": entity.get_id(),\n",
     "        \"Wikidata_url\": entity.get_url(),\n",
-    "        \"Year\": row[\"originalDateYear\"],\n",
+    "        \"Year\": row[using_dataset[\"year_col\"]],\n",
     "        \"Span_text\": entity.get_span().text,\n",
     "    } for entity in entities]"
    ]
@@ -435,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +790,7 @@
     }
    ],
    "source": [
-    "dataset_df[\"doc\"] = list(nlp.pipe(dataset_df['originalBodyText']))\n",
+    "dataset_df[\"doc\"] = list(nlp.pipe(dataset_df[using_dataset[\"text_col\"]]))\n",
     "dataset_df[\"entities\"] = dataset_df[\"doc\"].apply(get_entities_from_doc)\n",
     "\n",
     "all_entities_data = list(chain.from_iterable(dataset_df.apply(get_entity_data, args=(\"entities\",), axis=1)))\n",
