--- a/ngrams.ipynb
+++ b/ngrams.ipynb
@@ -37,7 +37,8 @@
    "source": [
     "import os\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from dataset_config import BASE_FAKESPEAK_CONFIG, BASE_MISINFOTEXT_CONFIG"
    ]
   },
   {
@@ -81,19 +82,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class DatasetConfig():\n",
-    "    input_path: str\n",
-    "    output_path: str\n",
-    "    output_path_headlines: str\n",
-    "    sheet_name: str\n",
-    "    usecols: list[str]\n",
+    "fakespeak_config = BASE_FAKESPEAK_CONFIG | {\n",
+    "    \"output_path\": \"./data/Fakespeak-ENG/Analysis_output/Fakespeak_ngrams.xlsx\",\n",
+    "    \"output_path_headlines\": \"./data/Fakespeak-ENG/Analysis_output/Fakespeak_ngrams_headlines.xlsx\",\n",
+    "    \"usecols\": BASE_FAKESPEAK_CONFIG[\"usecols\"] + [\"originalHeadline\"]\n",
+    "}\n",
     "\n",
-    "    def __init__(self, input_path: str, output_path: str, output_path_headlines: str, sheet_name: str, usecols: list[str]):\n",
-    "        self.input_path = input_path\n",
-    "        self.output_path = output_path\n",
-    "        self.output_path_headlines = output_path_headlines\n",
-    "        self.sheet_name = sheet_name\n",
-    "        self.usecols = usecols"
+    "misinfotext_config = BASE_MISINFOTEXT_CONFIG | {\n",
+    "    \"output_path\": \"./data/MisInfoText/Analysis_output/MisInfoText_ngrams_headlines.xlsx\",\n",
+    "    \"output_path_headlines\": \"./data/MisInfoText/Analysis_output/MisInfoText_ngrams_headlines.xlsx\",\n",
+    "}"
    ]
   },
   {
@@ -102,36 +100,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fakespeak_config = DatasetConfig(\n",
-    "    # file_path=\"/content/drive/My Drive/fake_news_over_time/Fakespeak_ENG_modified.xlsx\",\n",
-    "    input_path=\"./data/Fakespeak-ENG/Fakespeak-ENG modified.xlsx\",\n",
-    "    output_path=\"./data/Fakespeak-ENG/Analysis_output/Fakespeak_ngrams.xlsx\",\n",
-    "    output_path_headlines=\"./data/Fakespeak-ENG/Analysis_output/Fakespeak_ngrams_headlines.xlsx\",\n",
-    "    sheet_name=\"Working\",\n",
-    "    usecols=['ID', 'combinedLabel', 'originalTextType', 'originalBodyText', 'originalDateYear', 'originalHeadline']\n",
-    ")\n",
-    "\n",
-    "misinfotext_config = DatasetConfig(\n",
-    "    input_path=\"./data/MisInfoText/PolitiFact_original_modified.xlsx\",\n",
-    "    output_path=\"./data/MisInfoText/Analysis_output/MisInfoText_ngrams.xlsx\",\n",
-    "    output_path_headlines=\"./data/MisInfoText/Analysis_output/MisInfoText_ngrams_headlines.xlsx\",\n",
-    "    sheet_name=\"Working\",\n",
-    "    usecols=None\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "using_dataset = fakespeak_config"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "executionInfo": {
      "elapsed": 4063,
@@ -148,9 +122,9 @@
    "outputs": [],
    "source": [
     "dataset_df = pd.read_excel(\n",
-    "    using_dataset.input_path, \n",
-    "    sheet_name=using_dataset.sheet_name, \n",
-    "    usecols=using_dataset.usecols\n",
+    "    using_dataset[\"input_path\"], \n",
+    "    sheet_name=using_dataset[\"sheet_name\"], \n",
+    "    usecols=using_dataset[\"usecols\"]\n",
     ")"
    ]
   },
@@ -184,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +263,7 @@
        "4              2019  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +303,7 @@
    "source": [
     "# helper function to find ngrams for articles from each year\n",
     "def get_ngram_counts(df: pd.DataFrame, col: str):\n",
-    "  year = df[\"originalDateYear\"].iloc[0]\n",
+    "  year = df[using_dataset[\"year_col\"]].iloc[0]\n",
     "\n",
     "  # initialize vector\n",
     "  c_vec = CountVectorizer(ngram_range=(1, 5))\n",
