--- a/quote_extraction.ipynb
+++ b/quote_extraction.ipynb
@@ -2,69 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "0989fdd0",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from quote_extractor import QuoteExtractor"
+    "from quote_extractor import QuoteExtractor\n",
+    "from dataset_config import BASE_FAKESPEAK_CONFIG, BASE_MISINFOTEXT_CONFIG"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "413b5e8c",
+   "execution_count": 3,
+   "id": "78386d16",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class DatasetConfig():\n",
-    "    input_path: str\n",
-    "    output_path: str\n",
-    "    quote_annotations_path: str\n",
-    "    sheet_name: str\n",
-    "    id_col: str\n",
-    "    usecols: list[str]\n",
+    "fakespeak_config = BASE_FAKESPEAK_CONFIG | {\n",
+    "    \"output_path\": \"./data/Fakespeak-ENG/Analysis_output/Fakespeak_quotes.xlsx\"\n",
+    "}\n",
     "\n",
-    "    def __init__(self, input_path: str, output_path: str, quote_annotations_path: str, sheet_name: str, id_col: str, usecols: list[str]):\n",
-    "        self.input_path = input_path\n",
-    "        self.output_path = output_path\n",
-    "        self.quote_annotations_path = quote_annotations_path\n",
-    "        self.sheet_name = sheet_name\n",
-    "        self.id_col = id_col\n",
-    "        self.usecols = usecols"
+    "misinfotext_config = BASE_MISINFOTEXT_CONFIG | {\n",
+    "    \"output_path\": \"./data/MisInfoText/Analysis_output/MisInfoText_quotes.xlsx\"\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "96c6f05d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fakespeak_config = DatasetConfig(\n",
-    "    # file_path=\"/content/drive/My Drive/fake_news_over_time/Fakespeak_ENG_modified.xlsx\",\n",
-    "    input_path=\"./data/Fakespeak-ENG/Fakespeak-ENG modified.xlsx\",\n",
-    "    output_path=\"./data/Fakespeak-ENG/Analysis_output/Fakespeak_quotes.xlsx\",\n",
-    "    quote_annotations_path=\"./data/Fakespeak-ENG/Analysis_output/quote_annotations.json\",\n",
-    "    sheet_name=\"Working\",\n",
-    "    id_col=\"ID\",\n",
-    "    usecols=['ID', 'combinedLabel', 'originalTextType', 'originalBodyText', 'originalDateYear'],\n",
-    ")\n",
-    "\n",
-    "misinfotext_config = DatasetConfig(\n",
-    "    input_path=\"./data/MisInfoText/PolitiFact_original_modified.xlsx\",\n",
-    "    output_path=\"./data/MisInfoText/Analysis_output/MisInfoText_quotes.xlsx\",\n",
-    "    quote_annotations_path=\"./data/MisInfoText/Analysis_output/quote_annotations.json\",\n",
-    "    sheet_name=\"Working\",\n",
-    "    id_col=\"factcheckURL\",\n",
-    "    usecols=None,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "8a6c7b81",
    "metadata": {},
    "outputs": [],
@@ -74,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "6015a0cc",
    "metadata": {},
    "outputs": [
@@ -243,32 +209,41 @@
        "[2961 rows x 5 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dataset_df = pd.read_excel(\n",
-    "    using_dataset.input_path, \n",
-    "    sheet_name=using_dataset.sheet_name, \n",
-    "    usecols=using_dataset.usecols)\n",
+    "    using_dataset[\"input_path\"], \n",
+    "    sheet_name=using_dataset[\"sheet_name\"], \n",
+    "    usecols=using_dataset[\"usecols\"])\n",
     "dataset_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "9f4d79f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Adam\\AppData\\Local\\Python\\pythoncore-3.11-64\\Lib\\site-packages\\coreferee\\manager.py:11: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
+      "  import pkg_resources\n"
+     ]
+    }
+   ],
    "source": [
-    "quote_extractor = QuoteExtractor(\"en_core_web_lg\", \"./quote_verb_list.txt\")"
+    "quote_extractor = QuoteExtractor(\"en_core_web_lg\", \"./config/quote_verb_list.txt\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "d98ec6db",
    "metadata": {},
    "outputs": [
@@ -284,12 +259,15 @@
     }
    ],
    "source": [
-    "quote_annotations = quote_extractor.run_multiple(dataset_df[using_dataset.id_col], dataset_df[\"originalBodyText\"])"
+    "quote_annotations = quote_extractor.run_multiple(\n",
+    "    dataset_df[using_dataset[\"id_col\"]], \n",
+    "    dataset_df[using_dataset[\"text_col\"]]\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "id": "27a2f298",
    "metadata": {},
    "outputs": [
@@ -495,7 +473,7 @@
        "[2961 rows x 7 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "id": "56cc2a8a",
    "metadata": {},
    "outputs": [
@@ -716,7 +694,7 @@
        "[4445 rows x 7 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
