--- a/sentiment_analyzer.ipynb
+++ b/sentiment_analyzer.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {
     "id": "1WcaVBZNwTYw"
    },
@@ -71,8 +71,10 @@
    "source": [
     "import os\n",
     "import spacy\n",
+    "from spacy.tokens.doc import Doc\n",
     "from spacytextblob.spacytextblob import SpacyTextBlob\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from dataset_config import BASE_FAKESPEAK_CONFIG, BASE_MISINFOTEXT_CONFIG"
    ]
   },
   {
@@ -98,23 +100,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class DatasetConfig():\n",
-    "    input_path: str\n",
-    "    output_path: str\n",
-    "    sheet_name: str\n",
-    "    usecols: list[str]\n",
-    "    id_col: str\n",
+    "# fakespeak_config = DatasetConfig(\n",
+    "#     # file_path=\"/content/drive/My Drive/fake_news_over_time/Fakespeak_ENG_modified.xlsx\",\n",
+    "#     input_path=\"./data/Fakespeak-ENG/Fakespeak-ENG modified.xlsx\",\n",
+    "#     output_path=\"./data/Fakespeak-ENG/Analysis_output/Fakespeak_sentiment_analysis.xlsx\",\n",
+    "#     sheet_name=\"Working\",\n",
+    "#     usecols=['ID', 'combinedLabel', 'originalTextType', 'originalBodyText', 'originalDateYear'],\n",
+    "#     id_col=\"ID\"\n",
+    "# )\n",
     "\n",
-    "    def __init__(self, input_path: str, output_path: str, sheet_name: str, usecols: list[str], id_col: str):\n",
-    "        self.input_path = input_path\n",
-    "        self.output_path = output_path\n",
-    "        self.sheet_name = sheet_name\n",
-    "        self.usecols = usecols\n",
-    "        self.id_col = id_col"
+    "# misinfotext_config = DatasetConfig(\n",
+    "#     input_path=\"./data/MisInfoText/PolitiFact_original_modified.xlsx\",\n",
+    "#     output_path=\"./data/MisInfoText/Analysis_output/MisInfoText_sentiment_analysis.xlsx\",\n",
+    "#     sheet_name=\"Working\",\n",
+    "#     usecols=None,\n",
+    "#     id_col=\"factcheckURL\"\n",
+    "# )"
    ]
   },
   {
@@ -123,27 +128,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fakespeak_config = DatasetConfig(\n",
-    "    # file_path=\"/content/drive/My Drive/fake_news_over_time/Fakespeak_ENG_modified.xlsx\",\n",
-    "    input_path=\"./data/Fakespeak-ENG/Fakespeak-ENG modified.xlsx\",\n",
-    "    output_path=\"./data/Fakespeak-ENG/Analysis_output/Fakespeak_sentiment_analysis.xlsx\",\n",
-    "    sheet_name=\"Working\",\n",
-    "    usecols=['ID', 'combinedLabel', 'originalTextType', 'originalBodyText', 'originalDateYear'],\n",
-    "    id_col=\"ID\"\n",
-    ")\n",
+    "fakespeak_config = BASE_FAKESPEAK_CONFIG | {\n",
+    "    \"output_path\": \"./data/Fakespeak-ENG/Analysis_output/Fakespeak_sentiment_analysis.xlsx\",\n",
+    "}\n",
     "\n",
-    "misinfotext_config = DatasetConfig(\n",
-    "    input_path=\"./data/MisInfoText/PolitiFact_original_modified.xlsx\",\n",
-    "    output_path=\"./data/MisInfoText/Analysis_output/MisInfoText_sentiment_analysis.xlsx\",\n",
-    "    sheet_name=\"Working\",\n",
-    "    usecols=None,\n",
-    "    id_col=\"factcheckURL\"\n",
-    ")"
+    "misinfotext_config = BASE_MISINFOTEXT_CONFIG | {\n",
+    "    \"output_path\": \"./data/MisInfoText/Analysis_output/MisInfoText_sentiment_analysis.xlsx\",\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,9 +153,9 @@
    "outputs": [],
    "source": [
     "dataset_df = pd.read_excel(\n",
-    "    using_dataset.input_path, \n",
-    "    sheet_name=using_dataset.sheet_name, \n",
-    "    usecols=using_dataset.usecols\n",
+    "    using_dataset[\"input_path\"], \n",
+    "    sheet_name=using_dataset[\"sheet_name\"], \n",
+    "    usecols=using_dataset[\"usecols\"]\n",
     ")"
    ]
   },
@@ -188,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -297,7 +293,7 @@
        "4  Huge@#CD 9 news. \\n@ncsbe\\n sent letter to eve...              2019  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,9 +327,17 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Adam\\AppData\\Local\\Python\\pythoncore-3.11-64\\Lib\\site-packages\\coreferee\\manager.py:11: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
+      "  import pkg_resources\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<spacytextblob.spacytextblob.SpacyTextBlob at 0x1f0edd05790>"
+       "<spacytextblob.spacytextblob.SpacyTextBlob at 0x27db68531d0>"
       ]
      },
      "execution_count": 9,
@@ -462,13 +466,13 @@
     }
    ],
    "source": [
-    "dataset_df[\"doc\"] = list(nlp.pipe(dataset_df[\"originalBodyText\"]))\n",
+    "dataset_df[\"doc\"] = list(nlp.pipe(dataset_df[using_dataset[\"text_col\"]]))\n",
     "dataset_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +582,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2930 rows × 4 columns</p>\n",
+       "<p>2961 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -608,17 +612,17 @@
        "2959  2021  \n",
        "2960  2023  \n",
        "\n",
-       "[2930 rows x 4 columns]"
+       "[2961 rows x 4 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sentiment_df = pd.DataFrame(data={\n",
-    "    \"ID\": dataset_df[using_dataset.id_col],\n",
+    "    \"ID\": dataset_df[using_dataset[\"id_col\"]],\n",
     "    \"Polarity\": dataset_df[\"doc\"].apply(lambda doc: doc._.blob.polarity),\n",
     "    \"Subjectivity\": dataset_df[\"doc\"].apply(lambda doc: doc._.blob.subjectivity),\n",
     "    \"Year\": dataset_df[\"originalDateYear\"]\n",
